variables.Variables.scala.error
Erreur de compilation :
Variables:5: error: '(' expected but identifier found.
while dejaFait!=x{recule()}
      ^