variables.Variables.scala.code
var x=0
while (!estSurBiscuit){x=x+1;avance()}
porteBiscuit()
var dejaFait=0
while dejaFait!=x{recule()}
poseBiscuit()